feat: add echo route
